"#2 hero added a little"

--- a/index.html
+++ b/index.html
@@ -48,5 +48,25 @@
         </div>
       </nav>
     </div>
+
+    <!-- hero -->
+    <div class="hero">
+      <div class="container">
+        <div class="row p-4">
+          <div class="col-md-2 col-sm-1 col-lg-2">
+            <h1>Discover and Find Your Own Fashion!</h1>
+
+            <p>
+              Explore our curated collection of stylish clothing and accessories
+              tailored to your unique taste.
+            </p>
+            <button class="btn mycolor">Explore Now</button>
+          </div>
+          <div class="col-md-2 col-sm-1 col-lg-2">
+            <img src="images/Mask group.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
