--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
           <div class="container d-flex justify-content-end">
             <img src="images/cart.png" alt="" />
-            <button class="btn">Login</button>
+            <button class="btn btn-outline-success">Login</button>
           </div>
         </div>
       </nav>
@@ -62,7 +62,7 @@
             </p>
             <button class="btn mycolor">Explore Now</button>
           </div>
-          <div class="col-md-2 col-sm-1 col-lg-2">
+          <div class="col-md-2 col-sm-1 col-lg-2 ms-4">
             <img src="images/Mask group.png" alt="" />
           </div>
         </div>
